<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:textSize="20sp"
        android:text="Register yourself as Patient"
        android:textColor="@color/orange"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPatientRegisterFullName"
        android:layout_width="260dp"
        android:layout_height="60dp"

        android:layout_marginTop="48dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:hint="@string/name"
            android:textColor="@color/violet"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPatientRegisterEmail"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientRegisterFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:textColor="@color/violet"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPatientRegisterPassword"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@color/orange"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientRegisterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textColor="@color/violet"
            android:textStyle="bold"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPatientRegisterConfirmPassword"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientRegisterPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/violet"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonPatientRegister"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientRegisterConfirmPassword" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientRegisterConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>